# amcl-lidar-bot

./: README.md
amcl_lidar_bot/: CMakeLists.txt  package.xml
my_robot/: package.xml
my_robot/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
my_robot/launch/: amcl.launch  config.rviz  my_robot.rviz  world.launch
my_robot/maps/: my_world.pgm  my_world.yaml  my_world_fix.xcf
my_robot/models/ball_blue/: model.sdf
my_robot/models/ball_gray/: model.sdf
my_robot/models/ball_green/: model.sdf
my_robot/models/ball_red/: model.sdf
my_robot/models/ball_white/: model.sdf
my_robot/models/my_building/: model.sdf
my_robot/urdf/: my_robot.gazebo  my_robot.xacro
my_robot/worlds/: my_world.world
surveyor/: CMakeLists.txt  package.xml
surveyor/launch/: surveyor.launch
surveyor/src/: drive_bot.cpp  process_laser.cpp
