<?xml version="1.0"?>
<package format="2">
  <name>amcl_lidar_bot</name>
  <version>1.0.0</version>
  <description>
      Metapackage containing packages for a 4-wheeled skid-steer drive bot that localizes itself and moves autonomously based on laser measurements.
  </description>

  <author email="gsotirch@gmail.com">George Sotirchos</author>
  <maintainer email="gsotirch@gmail.com">George Sotirchos</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/7555G/amcl-lidar-bot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>my_robot</depend>
  <depend>ball_chaser</depend>
</package>
